Signed-off-by: wynan <wynan830@163.com>

--- a/index.html
+++ b/index.html
@@ -14,15 +14,40 @@
     <div id="imggrid">
     </div>
     <script>
+        var data = {
+            "page": 1,//当前页码
+            "records": 19,//总条数
+            "rows": [{ "Id": 60, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 61, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 62, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 63, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 64, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 65, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 66, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 67, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 68, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 69, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 70, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 71, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 72, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 73, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 74, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 75, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 76, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 77, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" },
+                    { "Id": 78, "ImgUrl": "http://ojna4zpbt.bkt.clouddn.com/1.jpg" }
+            ]
+        };
         $('#imggrid').imgGrid({
             title: '图片集',
-            type:'GET',//GET|POST
-            url: 'Data/data.json',//url
+            type: 'GET',//GET|POST
+            data:data,//本地数据
+            //url: 'Data/data.json',//ajax URL
             params: { type: 0 },//url参数
             height: '400px',
-            width: '1000px',
+            width: '850px',
             img: { width: '200px', animate: 'zoomIn' },//图片宽度，及动画效果
-            onClick: function (obj,index, item) {//点击图片事件
+            onClick: function (obj, index, item) {//点击图片事件
                 alert(index);
             },
             render: function (item, index) {//自定义显示图片
